--- a/index.html
+++ b/index.html
@@ -1,6 +1,86 @@
-<html>
-  <body>
-    <h1>Hello, I'm Zahid!</h1>
-    <p>My website is now live.</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Zahid Jamal • Talent Profile</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 40px;
+      line-height: 1.6;
+      background: #f6f8fa;
+    }
+    .container {
+      max-width: 700px;
+      margin: auto;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    }
+    h1 {
+      margin-top: 0;
+      color: #222;
+    }
+    h2 {
+      margin-top: 30px;
+      color: #444;
+    }
+    .section {
+      margin-bottom: 20px;
+    }
+    .tag {
+      display: inline-block;
+      padding: 6px 12px;
+      background: #e8eefc;
+      color: #1a3db4;
+      border-radius: 6px;
+      margin-right: 8px;
+      margin-bottom: 8px;
+      font-size: 14px;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <h1>Hi, I'm Zahid Jamal</h1>
+    <p>Consultant – Sales Planning & Strategy</p>
+
+    <div class="section">
+      <h2>About Me</h2>
+      <p>
+        I work at the intersection of sales planning, compensation design,
+        quota modeling, and analytics. I enjoy simplifying complex GTM problems
+        and building insights that drive leadership decisions.
+      </p>
+    </div>
+
+    <div class="section">
+      <h2>Skills</h2>
+      <span class="tag">Sales Compensation</span>
+      <span class="tag">Quota Planning</span>
+      <span class="tag">Data Modeling</span>
+      <span class="tag">Power BI</span>
+      <span class="tag">SQL</span>
+      <span class="tag">Storytelling</span>
+    </div>
+
+    <div class="section">
+      <h2>Experience Highlights</h2>
+      <ul>
+        <li>Designed and analyzed comp impacts for specialist seller motions.</li>
+        <li>Built scenario models to assess payout volatility.</li>
+        <li>Partnered with leadership on quota cycle redesign strategy.</li>
+      </ul>
+    </div>
+
+    <div class="section">
+      <h2>Contact</h2>
+      <p>Email: your-email@example.com</p>
+      <p>LinkedIn: linkedin.com/in/your-profile</p>
+    </div>
+  </div>
+</body>
 </html>
