--- a/index.html
+++ b/index.html
@@ -119,14 +119,15 @@
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="section reveal">
-    <h2>Contact</h2>
-    <p>
-      📧 <a href="mailto:your.email@example.com">your.email@example.com</a> &nbsp;|&nbsp;
-      💼 <a href="https://www.linkedin.com/in/yourhandle" target="_blank" rel="noopener">LinkedIn</a> &nbsp;|&nbsp;
-      💻 <a href="https://github.com/zahidjamal" target="_blank" rel="noopener">GitHub</a>
-    </p>
-  </section>
+<section id="contact" class="section reveal">
+  <h2>Contact</h2>
+  <p>
+    📧 <a href="mailto:zahidjamal50@gmail.com">zahidjamal50@gmail.com</a> &nbsp;|&nbsp;
+    🔗 <a href="https://www.linkedin.com/in/zahid-m-jamal/" target="_blank">LinkedIn</a> &nbsp;|&nbsp;
+    📱 +91 8220385585
+  </p>
+</section>
+
 
   <footer class="footer">© <span id="year"></span> Zahid Jamal · Built with GitHub Pages</footer>
   <script src="script.js"></script>
