--- a/index.html
+++ b/index.html
@@ -37,18 +37,29 @@
   </section>
 
   <!-- About -->
-  <section id="about" class="section reveal">
-    <h2>About Me</h2>
-    <p>
-      I build data‑driven <strong>sales compensation</strong> and <strong>quota models</strong> that align incentives with strategy,
-      and craft clear narratives leaders can act on. Comfortable with ambiguity, quick with numbers, and obsessed with clean storytelling.
-    </p>
-    <ul class="highlights">
-      <li>Comp plan analysis for long‑cycle specialist motions</li>
-      <li>Scenario modeling (thresholds, accelerators, cost of sales)</li>
-      <li>Quota quality reviews and risk guardrails</li>
-    </ul>
-  </section>
+ <section id="about" class="section reveal">
+  <h2>About Me</h2>
+  <p>
+    I am a finance professional with 7 years of diverse experience across GTM strategy, revenue management, 
+    and sales business partnering within Dell’s Data Center business. My work focuses on aligning sales execution 
+    with market opportunities, driving scalable growth, and strengthening operational excellence through 
+    data‑driven decision making.
+  </p>
+
+  <p>
+    I am currently in Year 2 of Dell’s Finance Rotation Program (FRP), a mid‑management leadership development 
+    program that builds future finance leaders. My journey through FRP, FDP, and SOCP has given me a strong 
+    foundation across procurement finance, shared services, accounting, and sales operations.
+  </p>
+
+  <p>
+    I bring a proactive, analytical approach to solving complex business challenges, with a strong track record 
+    in business transformation and sales finance partnership. Guided by values of integrity, collaboration, 
+    continuous learning, and community impact, I strive to deliver results that create meaningful value for both 
+    the business and the teams I work with.
+  </p>
+</section>
+
 
   <!-- Experience (timeline) -->
   <section id="experience" class="section reveal">
