--- a/index.html
+++ b/index.html
@@ -91,6 +91,40 @@
     </div>
   </section>
 
+  
+  <!-- Education -->
+  <section id="education" class="section reveal">
+  <h2>Education</h2>
+
+  <div class="timeline">
+
+    <!-- SIBM Bengaluru -->
+    <div class="item">
+      <div class="when">2016 — 2018</div>
+      <div class="card">
+        <h3>Symbiosis Institute of Business Management (SIBM), Bengaluru</h3>
+        <p><strong>Master of Business Administration (MBA)</strong>, Business Administration & Management</p>
+        <ul>
+          <li>Senior Member — Corporate Relations & Placement Team</li>
+          <li>Coordinator — Finergy, The Finance Club</li>
+          <li>Bloomberg Champion (Academic Year 2017–2018)</li>
+          <li>Student Research Assistant under Dr. Madhvi Sethi & Prof. Pooja Gupta</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Loyola College -->
+    <div class="item">
+      <div class="when">2013 — 2016</div>
+      <div class="card">
+        <h3>Loyola College</h3>
+        <p><strong>Bachelor of Commerce (B.Com)</strong>, Business/Commerce</p>
+      </div>
+    </div>
+
+  </div>
+</section>
+  
   <!-- Skills -->
   <section id="skills" class="section reveal">
     <h2>Skills</h2>
