--- a/index.html
+++ b/index.html
@@ -124,6 +124,53 @@
 
   </div>
 </section>
+
+  <!-- Certification -->
+  <section id="certifications" class="section reveal">
+  <h2>Licenses & Certifications</h2>
+
+  <div class="timeline">
+
+    <!-- XLRI -->
+    <div class="item">
+      <div class="when">Issued Jan 2024</div>
+      <div class="card">
+        <h3>Sales Forecasting and Demand Planning</h3>
+        <p>XLRI Jamshedpur</p>
+        <p class="muted">Credential ID: XL-307882</p>
+      </div>
+    </div>
+
+    <!-- SOCP -->
+    <div class="item">
+      <div class="when">Issued Sep 2021</div>
+      <div class="card">
+        <h3>Sales Operations Certificate Program (SOCP)</h3>
+        <p>Dell Technologies</p>
+      </div>
+    </div>
+
+    <!-- Bloomberg -->
+    <div class="item">
+      <div class="when">Issued Jul 2017</div>
+      <div class="card">
+        <h3>Bloomberg Market Concepts (BMC)</h3>
+        <p>Bloomberg</p>
+      </div>
+    </div>
+
+    <!-- SAP -->
+    <div class="item">
+      <div class="when">Issued Nov 2013</div>
+      <div class="card">
+        <h3>SAP Global Certification</h3>
+        <p>SAP</p>
+        <p class="muted">Credential ID: 0011992041</p>
+      </div>
+    </div>
+
+  </div>
+</section>
   
   <!-- Skills -->
   <section id="skills" class="section reveal">
