--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <a href="#home" class="logo">ZJ</a>
     <nav>
       <a href="#about">About</a>
-      <a href="#experience">Experience</a>
+      <a href="#experience">Experience</a>    
+<a href="#education">Education</a>
+  <a href="#certifications">Certifications</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
