--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <!-- Hero -->
   <section id="home" class="hero reveal">
     <img class="avatar" src="assets/profile.jpg" alt="Zahid Jamal headshot" />
-    <h1>Hi, I’m <span class="accent">Zahid Jamal</span></h1>
-    <p class="subtitle">Consultant — Sales Planning & Strategy</p>
+    <h1>Hi there, I’m <span class="accent">Zahid Jamal</span></h1>
+    <p class="subtitle">Go To Market Strategy | Driving Profitable Growth in Dell's Data Center Business | Sales Strategy & Planning</p>
     <p class="tagline">I turn complex GTM, quota, and comp problems into simple, executive‑ready insights.</p>
     <div class="cta">
       <a class="btn" href="#projects">View Work</a>
