--- a/index.html
+++ b/index.html
@@ -63,42 +63,87 @@
 
 
   <!-- Experience (timeline) -->
-  <section id="experience" class="section reveal">
-    <h2>Experience</h2>
-    <div class="timeline">
-      <div class="item">
-        <div class="when">2024 — Present</div>
-        <div class="card">
-          <h3>Consultant, Sales Planning & Strategy</h3>
-          <p>Designed insights on accelerated pay curves; modeled payout volatility; advised on annual/H1 quota cycles for lumpy motions.</p>
-          <ul>
-            <li>Built scenario simulator to compare old vs new curves</li>
-            <li>Reduced payout lumpiness via draw/threshold tweaks</li>
-            <li>Created exec one‑pagers and talk tracks</li>
-          </ul>
-        </div>
-      </div>
-      <div class="item">
-        <div class="when">Prior Roles</div>
-        <div class="card">
-          <h3>Strategy & Analytics (selected highlights)</h3>
-          <ul>
-            <li>Territory & quota planning across regions</li>
-            <li>Dashboards for attainment, pipeline health, and risk</li>
-            <li>Program management for high‑stakes initiatives</li>
-          </ul>
-        </div>
-      </div>
+<h3 style="margin-top: 2rem;">Dell Technologies</h3>
+<div class="timeline">
+
+  <!-- Consultant -->
+  <div class="item">
+    <div class="when">May 2025 — Present</div>
+    <div class="card">
+      <h3>Consultant — Sales Planning & Strategy (ISG Sales)</h3>
+      <ul>
+        <li>Support Go To Market (GTM) strategy and execution for Dell’s ISG business, partnering with sales leadership to drive profitable growth.</li>
+        <li>Develop financial and performance insights across quota, attainment, and seller economics to influence sales planning decisions.</li>
+        <li>Build frameworks and models aligning market opportunity with sales execution and compensation design.</li>
+        <li>Shape strategic recommendations used by senior leaders across finance and sales operations.</li>
+      </ul>
     </div>
-  </section>
+  </div>
+
+  <!-- Senior Financial Advisor -->
+  <div class="item">
+    <div class="when">Apr 2023 — May 2025</div>
+    <div class="card">
+      <h3>Senior Financial Advisor — ISG Controller</h3>
+      <ul>
+        <li>Served as the Controller for the ISG business, managing P&L governance, forecast accuracy, and strategic investment evaluation.</li>
+        <li>Partnered with product and sales leaders to influence pricing decisions, margin structure, and profitability outcomes.</li>
+        <li>Led planning cycles, financial modeling, and insights supporting quarterly and annual performance reviews.</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Financial Advisor -->
+  <div class="item">
+    <div class="when">Sep 2021 — Apr 2023</div>
+    <div class="card">
+      <h3>Financial Advisor — Sales Operations</h3>
+      <ul>
+        <li>Supported multiple Storage product lines as a junior controller, ensuring forecast accuracy and risk mitigation.</li>
+        <li>Delivered insights on revenue drivers, deal performance, and pipeline conversion to improve sales predictability.</li>
+        <li>Collaborated with product, sales, and pricing teams to drive operational rigor and financial discipline.</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Senior Analyst (FDP Rotations) -->
+  <div class="item">
+    <div class="when">Jun 2018 — Sep 2021</div>
+    <div class="card">
+      <h3>Senior Analyst — Finance Development Program (FDP)</h3>
+      <ul>
+        <li>Completed four structured finance rotations:  
+          <ul>
+            <li>Accounting</li>
+            <li>Customer Financial Services</li>
+            <li>GBO Emerging Markets</li>
+            <li>Global Operations Finance — Market Commodities</li>
+          </ul>
+        </li>
+        <li>Gained end‑to‑end exposure across controllership, shared services, operations, and financial governance.</li>
+        <li>Developed strong analytical, business partnering, and process improvement capabilities.</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Management Trainee -->
+  <div class="item">
+    <div class="when">Apr 2017 — May 2017</div>
+    <div class="card">
+      <h3>Management Trainee</h3>
+      <ul>
+        <li>Early internship exposure to Dell’s finance operating model, forecasting cadence, and cross‑functional collaboration.</li>
+      </ul>
+    </div>
+  </div>
+
+</div>
 
   
   <!-- Education -->
   <section id="education" class="section reveal">
   <h2>Education</h2>
-
   <div class="timeline">
-
     <!-- SIBM Bengaluru -->
     <div class="item">
       <div class="when">2016 — 2018</div>
