--- a/index.html
+++ b/index.html
@@ -70,12 +70,8 @@
   <div class="item">
     <div class="when">May 2025 — Present</div>
     <div class="card">
-      <h3>Consultant — Sales Planning & Strategy (ISG Sales)</h3>
+      <h3>Consultant — Sales Planning & Strategy (GTM Strategy for ISG Sales)</h3>
       <ul>
-        <li>Support Go To Market (GTM) strategy and execution for Dell’s ISG business, partnering with sales leadership to drive profitable growth.</li>
-        <li>Develop financial and performance insights across quota, attainment, and seller economics to influence sales planning decisions.</li>
-        <li>Build frameworks and models aligning market opportunity with sales execution and compensation design.</li>
-        <li>Shape strategic recommendations used by senior leaders across finance and sales operations.</li>
       </ul>
     </div>
   </div>
@@ -84,11 +80,8 @@
   <div class="item">
     <div class="when">Apr 2023 — May 2025</div>
     <div class="card">
-      <h3>Senior Financial Advisor — ISG Controller</h3>
+      <h3>Senior Financial Advisor — APJC ISG Controller (Joined FRP Program) </h3>
       <ul>
-        <li>Served as the Controller for the ISG business, managing P&L governance, forecast accuracy, and strategic investment evaluation.</li>
-        <li>Partnered with product and sales leaders to influence pricing decisions, margin structure, and profitability outcomes.</li>
-        <li>Led planning cycles, financial modeling, and insights supporting quarterly and annual performance reviews.</li>
       </ul>
     </div>
   </div>
@@ -99,9 +92,6 @@
     <div class="card">
       <h3>Financial Advisor — Sales Operations</h3>
       <ul>
-        <li>Supported multiple Storage product lines as a junior controller, ensuring forecast accuracy and risk mitigation.</li>
-        <li>Delivered insights on revenue drivers, deal performance, and pipeline conversion to improve sales predictability.</li>
-        <li>Collaborated with product, sales, and pricing teams to drive operational rigor and financial discipline.</li>
       </ul>
     </div>
   </div>
@@ -120,8 +110,6 @@
             <li>Global Operations Finance — Market Commodities</li>
           </ul>
         </li>
-        <li>Gained end‑to‑end exposure across controllership, shared services, operations, and financial governance.</li>
-        <li>Developed strong analytical, business partnering, and process improvement capabilities.</li>
       </ul>
     </div>
   </div>
@@ -130,9 +118,8 @@
   <div class="item">
     <div class="when">Apr 2017 — May 2017</div>
     <div class="card">
-      <h3>Management Trainee</h3>
+      <h3>Intern</h3>
       <ul>
-        <li>Early internship exposure to Dell’s finance operating model, forecasting cadence, and cross‑functional collaboration.</li>
       </ul>
     </div>
   </div>
