--- a/index.html
+++ b/index.html
@@ -63,6 +63,23 @@
 
 
   <!-- Experience (timeline) -->
+  <section id="experience" class="section reveal">
+  <h2>Experience</h2>
+
+  <!-- NEW header -->
+  <h3 class="section-subtitle">Dell Experience</h3>
+
+  <!-- Dell timeline starts here -->
+  <div class="timeline">
+    <!-- …your Dell roles… -->
+  </div>
+
+  <!-- If you have pre‑Dell roles, keep this header too -->
+  <h3 class="section-subtitle" style="margin-top: 2rem;">Before Dell</h3>
+  <div class="timeline">
+    <!-- …your pre‑Dell roles… -->
+  </div>
+</section>
 <h3 style="margin-top: 2rem;">Dell Technologies</h3>
 <div class="timeline">
 
@@ -70,7 +87,7 @@
   <div class="item">
     <div class="when">May 2025 — Present</div>
     <div class="card">
-      <h3>Consultant — Sales Planning & Strategy (GTM Strategy for ISG Sales)</h3>
+      <h3>Consultant - Sales Planning & Strategy (GTM Strategy - ISG Sales)</h3>
       <ul>
       </ul>
     </div>
@@ -80,7 +97,7 @@
   <div class="item">
     <div class="when">Apr 2023 — May 2025</div>
     <div class="card">
-      <h3>Senior Financial Advisor — APJC ISG Controller (Joined FRP Program) </h3>
+      <h3>Senior Financial Advisor - APJC ISG Controller (Joined FRP Program) </h3>
       <ul>
       </ul>
     </div>
@@ -90,7 +107,7 @@
   <div class="item">
     <div class="when">Sep 2021 — Apr 2023</div>
     <div class="card">
-      <h3>Financial Advisor — Sales Operations</h3>
+      <h3>Financial Advisor - Sales Operations</h3>
       <ul>
       </ul>
     </div>
@@ -100,7 +117,7 @@
   <div class="item">
     <div class="when">Jun 2018 — Sep 2021</div>
     <div class="card">
-      <h3>Senior Analyst — Finance Development Program (FDP)</h3>
+      <h3>Senior Analyst - Finance Development Program (FDP)</h3>
       <ul>
         <li>Completed four structured finance rotations:  
           <ul>
