--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   <div class="item">
     <div class="when">May 2025 — Present</div>
     <div class="card">
-      <h3>Consultant - Sales Planning & Strategy (GTM Strategy - ISG Sales)</h3>
+      <h3>Consultant Sales Planning & Strategy (GTM Strategy - ISG Sales)</h3>
       <ul>
       </ul>
     </div>
@@ -97,7 +97,7 @@
   <div class="item">
     <div class="when">Apr 2023 — May 2025</div>
     <div class="card">
-      <h3>Senior Financial Advisor - APJC ISG Controller (Joined FRP Program) </h3>
+      <h3>Senior Financial Advisor APJC ISG Controller (Joined FRP Program) </h3>
       <ul>
       </ul>
     </div>
@@ -107,7 +107,7 @@
   <div class="item">
     <div class="when">Sep 2021 — Apr 2023</div>
     <div class="card">
-      <h3>Financial Advisor - Sales Operations</h3>
+      <h3>Financial Advisor Sales Operations</h3>
       <ul>
       </ul>
     </div>
