--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   <div class="item">
     <div class="when">Apr 2017 — May 2017</div>
     <div class="card">
-      <h3>GAT Intern</h3>
+      <h3>GAT Summer Intern</h3>
       <ul>
       </ul>
     </div>
