--- a/index.html
+++ b/index.html
@@ -62,87 +62,78 @@
 </section>
 
 
-  <!-- Experience (timeline) -->
-  <section id="experience" class="section reveal">
+ <!-- Experience (timeline) -->
+<section id="experience" class="section reveal">
   <h2>Experience</h2>
 
-  <!-- NEW header -->
+  <!-- Subheader -->
   <h3 class="section-subtitle">Dell Experience</h3>
 
   <!-- Dell timeline starts here -->
   <div class="timeline">
-    <!-- …your Dell roles… -->
+
+    <!-- Consultant -->
+    <div class="item">
+      <div class="when">May 2025 — Present</div>
+      <div class="card">
+        <h3>Consultant — Sales Planning & Strategy (GTM Strategy — ISG Sales)</h3>
+        <ul></ul>
+      </div>
+    </div>
+
+    <!-- Senior Financial Advisor -->
+    <div class="item">
+      <div class="when">Apr 2023 — May 2025</div>
+      <div class="card">
+        <h3>Senior Financial Advisor — APJC ISG Controller (Joined FRP Program)</h3>
+        <ul></ul>
+      </div>
+    </div>
+
+    <!-- Financial Advisor -->
+    <div class="item">
+      <div class="when">Sep 2021 — Apr 2023</div>
+      <div class="card">
+        <h3>Financial Advisor — Sales Operations</h3>
+        <ul></ul>
+      </div>
+    </div>
+
+    <!-- Senior Analyst (FDP Rotations) -->
+    <div class="item">
+      <div class="when">Jun 2018 — Sep 2021</div>
+      <div class="card">
+        <h3>Senior Analyst — Finance Development Program (FDP)</h3>
+        <ul>
+          <li>Completed four structured finance rotations:
+            <ul>
+              <li>Accounting</li>
+              <li>Customer Financial Services</li>
+              <li>GBO Emerging Markets</li>
+              <li>Global Operations Finance — Market Commodities</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- Management Trainee -->
+    <div class="item">
+      <div class="when">Apr 2017 — May 2017</div>
+      <div class="card">
+        <h3>GAT Summer Intern</h3>
+        <ul></ul>
+      </div>
+    </div>
+
   </div>
 
-  <!-- If you have pre‑Dell roles, keep this header too -->
+  <!-- Before Dell (optional, keep if you add items later) -->
   <h3 class="section-subtitle" style="margin-top: 2rem;">Before Dell</h3>
   <div class="timeline">
-    <!-- …your pre‑Dell roles… -->
+    <!-- …your pre‑Dell roles (if any)… -->
   </div>
 </section>
-<h3 style="margin-top: 2rem;">Dell Technologies</h3>
-<div class="timeline">
-
-  <!-- Consultant -->
-  <div class="item">
-    <div class="when">May 2025 — Present</div>
-    <div class="card">
-      <h3>Consultant Sales Planning & Strategy (GTM Strategy - ISG Sales)</h3>
-      <ul>
-      </ul>
-    </div>
-  </div>
-
-  <!-- Senior Financial Advisor -->
-  <div class="item">
-    <div class="when">Apr 2023 — May 2025</div>
-    <div class="card">
-      <h3>Senior Financial Advisor APJC ISG Controller (Joined FRP Program) </h3>
-      <ul>
-      </ul>
-    </div>
-  </div>
-
-  <!-- Financial Advisor -->
-  <div class="item">
-    <div class="when">Sep 2021 — Apr 2023</div>
-    <div class="card">
-      <h3>Financial Advisor Sales Operations</h3>
-      <ul>
-      </ul>
-    </div>
-  </div>
-
-  <!-- Senior Analyst (FDP Rotations) -->
-  <div class="item">
-    <div class="when">Jun 2018 — Sep 2021</div>
-    <div class="card">
-      <h3>Senior Analyst - Finance Development Program (FDP)</h3>
-      <ul>
-        <li>Completed four structured finance rotations:  
-          <ul>
-            <li>Accounting</li>
-            <li>Customer Financial Services</li>
-            <li>GBO Emerging Markets</li>
-            <li>Global Operations Finance — Market Commodities</li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- Management Trainee -->
-  <div class="item">
-    <div class="when">Apr 2017 — May 2017</div>
-    <div class="card">
-      <h3>GAT Summer Intern</h3>
-      <ul>
-      </ul>
-    </div>
-  </div>
-
-</div>
-
   
   <!-- Education -->
   <section id="education" class="section reveal">
