--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <ul>
           <li>Completed four structured finance rotations:
             <ul>
-              <li>Accounting</li>
+              <li>Accounting Shared Services</li>
               <li>Customer Financial Services</li>
               <li>GBO Emerging Markets</li>
               <li>Global Operations Finance — Market Commodities</li>
