--- a/index.html
+++ b/index.html
@@ -128,11 +128,50 @@
 
   </div>
 
-  <!-- Before Dell (optional, keep if you add items later) -->
-  <h3 class="section-subtitle" style="margin-top: 2rem;">Before Dell</h3>
-  <div class="timeline">
-    <!-- …your pre‑Dell roles (if any)… -->
+
+<h3 class="section-subtitle" style="margin-top: 2rem;">Early Career</h3>
+<div class="timeline">
+
+  <!-- Wildcraft Live Project -->
+  <div class="item">
+    <div class="when">Jul 2016 — Sep 2016</div>
+    <div class="card">
+      <h3>Live Project — Wildcraft India</h3>
+      <ul>
+        <li>Applied statistical tools to assess training and development needs across organizational functions.</li>
+        <li>Delivered insights that improved understanding of capability gaps and workforce development priorities.</li>
+      </ul>
+    </div>
   </div>
+
+  <!-- Goldman Sachs Internship -->
+  <div class="item">
+    <div class="when">May 2015 — Jun 2015</div>
+    <div class="card">
+      <h3>Summer Internship — Goldman Sachs</h3>
+      <p><em>Bengaluru, India</em></p>
+      <ul>
+        <li>Worked with the Anti-Money Laundering (AML) team on a project involving AML checks on 1,000+ entities.</li>
+        <li>Improved operational efficiency by standardizing key components of the AML review process.</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- Bloomberg Champions Program -->
+  <div class="item">
+    <div class="when">Jun 2017 — Jan 2018</div>
+    <div class="card">
+      <h3>Bloomberg Champions Program — Bloomberg LP</h3>
+      <ul>
+        <li>Trained extensively on the Bloomberg Professional Service (“Bloomberg Terminal”).</li>
+        <li>Supported adoption and integration of Bloomberg tools for financial research and analysis.</li>
+        <li>Runners-Up — TAPMI Bloomberg Olympiad 2017 (team competition).</li>
+      </ul>
+    </div>
+  </div>
+
+</div>
+
 </section>
   
   <!-- Education -->
