--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="item">
       <div class="when">Apr 2023 — May 2025</div>
       <div class="card">
-        <h3>Senior Financial Advisor — APJC ISG Controller (Joined FRP Program)</h3>
+        <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (Joined FRP Program)</h3>
         <ul></ul>
       </div>
     </div>
@@ -132,14 +132,21 @@
 <h3 class="section-subtitle" style="margin-top: 2rem;">Early Career</h3>
 <div class="timeline">
 
+    <!-- Bloomberg Champions Program -->
+  <div class="item">
+    <div class="when">Jun 2017 — Jan 2018</div>
+    <div class="card">
+      <h3>Bloomberg Champions Program — Bloomberg LP</h3>
+      <ul>
+      </ul>
+    </div>
+  </div>
   <!-- Wildcraft Live Project -->
   <div class="item">
     <div class="when">Jul 2016 — Sep 2016</div>
     <div class="card">
       <h3>Live Project — Wildcraft India</h3>
       <ul>
-        <li>Applied statistical tools to assess training and development needs across organizational functions.</li>
-        <li>Delivered insights that improved understanding of capability gaps and workforce development priorities.</li>
       </ul>
     </div>
   </div>
@@ -149,23 +156,7 @@
     <div class="when">May 2015 — Jun 2015</div>
     <div class="card">
       <h3>Summer Internship — Goldman Sachs</h3>
-      <p><em>Bengaluru, India</em></p>
       <ul>
-        <li>Worked with the Anti-Money Laundering (AML) team on a project involving AML checks on 1,000+ entities.</li>
-        <li>Improved operational efficiency by standardizing key components of the AML review process.</li>
-      </ul>
-    </div>
-  </div>
-
-  <!-- Bloomberg Champions Program -->
-  <div class="item">
-    <div class="when">Jun 2017 — Jan 2018</div>
-    <div class="card">
-      <h3>Bloomberg Champions Program — Bloomberg LP</h3>
-      <ul>
-        <li>Trained extensively on the Bloomberg Professional Service (“Bloomberg Terminal”).</li>
-        <li>Supported adoption and integration of Bloomberg tools for financial research and analysis.</li>
-        <li>Runners-Up — TAPMI Bloomberg Olympiad 2017 (team competition).</li>
       </ul>
     </div>
   </div>
