--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="item">
       <div class="when">Apr 2023 — May 2025</div>
       <div class="card">
-        <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (Joined FRP Program)</h3>
+        <h3>Senior Financial Advisor — APJC ISG Controller & Sales Business Partner (Joined FRP)</h3>
         <ul></ul>
       </div>
     </div>
